// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toast > renders with actions correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <div data-slot="actions" class="flex gap-1.5 shrink-0 items-start mt-2.5"><button type="button" data-slot="base" data-akar-toast-announce-exclude="" data-akar-toast-announce-alt="Action" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2 py-1 text-xs gap-1 color-text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3">
            <!--v-if--><span data-slot="label" class="truncate">Action</span>
            <!--v-if-->
          </button></div>
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with as correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <section data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </section>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with avatar correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-11 text-[22px] shrink-0"><img src="https://github.com/praburangki.png" width="44" height="44" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with class correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start bg-background-elevated/50" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with close slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if-->Close slot
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with closeIcon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:trash shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with color neutral correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-outline-inverted/25 focus-visible:outline-3 focus-visible:ring-ring-inverted items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-background-inverted motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with description correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <div data-slot="description" class="text-sm color-text-muted mt-1">This is a toast</div>
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with description slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <div data-slot="description" class="text-sm color-text-muted mt-1">Description slot</div>
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with icon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right"><span class="iconify i-lucide:rocket shrink-0 size-5 color-primary" aria-hidden="true" data-slot="icon"></span>
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with leading slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">Leading slot<div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with orientation horizontal correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="horizontal" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-center" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right"><span class="iconify i-lucide:rocket shrink-0 size-5 color-primary" aria-hidden="true" data-slot="icon"></span>
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <div data-slot="description" class="text-sm color-text-muted mt-1">This is a toast</div>
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center"><button type="button" data-slot="base" data-akar-toast-announce-exclude="" data-akar-toast-announce-alt="Action" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2 py-1 text-xs gap-1 color-text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3">
          <!--v-if--><span data-slot="label" class="truncate">Action</span>
          <!--v-if-->
        </button><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button></div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with orientation vertical correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right"><span class="iconify i-lucide:rocket shrink-0 size-5 color-primary" aria-hidden="true" data-slot="icon"></span>
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <div data-slot="description" class="text-sm color-text-muted mt-1">This is a toast</div>
        <div data-slot="actions" class="flex gap-1.5 shrink-0 items-start mt-2.5"><button type="button" data-slot="base" data-akar-toast-announce-exclude="" data-akar-toast-announce-alt="Action" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2 py-1 text-xs gap-1 color-text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3">
            <!--v-if--><span data-slot="label" class="truncate">Action</span>
            <!--v-if-->
          </button></div>
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with title correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with title slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Title slot</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with type correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with ui correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted font-700">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="flex gap-1.5 shrink-0 items-center">
        <!--v-if--><button type="button" data-slot="close" data-akar-toast-announce-exclude="" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders without close correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="fixed flex flex-col w-[calc(100%-2rem)] sm:w-96 z-[100] data-[expanded=true]:h-(--height) focus:outline-none right-4 bottom-4" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="relative group overflow-hidden bg-background shadow-lg rounded-lg ring ring-ring p-4 flex gap-2.5 outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary items-start" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="w-0 flex-1 flex flex-col">
        <div data-slot="title" class="text-sm font-500 color-text-highlighted">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-orientation="horizontal" data-slot="progress" class="gap-2 w-full flex flex-col absolute inset-x-0 bottom-0">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="relative overflow-hidden rounded-full bg-background-accented w-full h-1" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-280 ease-out motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;
